2006-06-19  Daniel Macks  <dmacks@netspace.org>

	* bootstrap: Gotta import a module before using its methods.

2006-06-15  Daniel Macks  <dmacks@netspace.org>

	* bootstrap: Clarify order of function calls. Cleaner quoting,
	improved diagnostics during FinkVersion.pm.in->FinkVersion.pm

2006-06-15  Chris Zubrzycki  <beren12@users.sourceforge.net>

	* bootstrap, bootstrap.pl, bootstrap.sh: Merged .pl and .sh into
	new bootstrap, Updated references.

2006-05-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl: Don't query the user about 10.4 vs. 10.4-transitional;
	simply display the information about how to control the choice.

2006-03-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* postinstall.pl.in: If AutoScanpackages is about to be turned on for the
	first time, pre-scan the user's debs rather than surprising them at the
	end of the next build.

2006-03-28  Daniel Macks  <dmacks@netspace.org>

	* bootstrap.pl: FinkVersion.pm::default_binary_version now returns
	undef if no known bindist

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* MANIFEST, MANIFEST.SKIP: tests need t/.../fink.conf

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* MANIFEST, MANIFEST.SKIP: Bootstrap.pm now uses MakeMaker

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* install.sh: Remember to install all the docfiles.
	* update-fink.sh: remove this remnant of the 10.1->10.2
	transition.

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* install.sh: Unified handling of ChangeLog files

2006-03-23  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* install.sh: Include perlmod/Fink/Finally in installation dirs.

2006-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* install.sh: Include Fink::Finally in manpages.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.8.in: Update ancient docs for 'fink scanpackages'.

2006-03-21  Dave Morrison  <dmrrsn@users.sourceforge.net>
