@@ -18,6 +18,7 @@ TODO
 TODO.shlibs
 bootstrap
 dpkg-checkall.sh
+fink-dpkg-status-cleanup.in
 fink.in
 fink.8.in
 fink.conf.5.in
